--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" href="css/style.css">
 </head>
   <body>
-<h1>Create Fireworks Effect Using Html5 Canvas</h1>
+<h1>പ്രിയപ്പെട്ട അസാപിയൻസിന് ഓണാശംസകൾ</h1>
 <span><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- Create Expand Collapse Sliding Menu Using jQuery1 -->
 <ins class="adsbygoogle"
