--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html >
   <head>
     <meta charset="UTF-8">
+    <meta name="theme-color" content="#000000" />
     <title>Create Fireworks Effect Using Html5 Canvas</title>
 <link rel="stylesheet" href="css/style.css">
 </head>
