--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <link rel="stylesheet" href="css/style.css">
 </head>
   <body>
+    <div class="hameid-loader-overlay"></div>    
 <h1>പ്രിയപ്പെട്ട അസാപിയൻസിന് ഓണാശംസകൾ</h1>
 <span><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- Create Expand Collapse Sliding Menu Using jQuery1 -->
