--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta name="theme-color" content="#000000" />
     <title>Create Fireworks Effect Using Html5 Canvas</title>
 <link rel="stylesheet" href="css/style.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script>
+    jQuery(window).load(function(){
+        jQuery(".hameid-loader-overlay").fadeOut(700);
+    });
+</script>
 </head>
   <body>
     <div class="hameid-loader-overlay"></div>    
