--- a/index.html
+++ b/index.html
@@ -7,13 +7,20 @@
 <link rel="stylesheet" href="css/style.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script>
-    jQuery(window).load(function(){
-        jQuery(".hameid-loader-overlay").fadeOut(700);
-    });
+// makes sure the whole site is loaded
+	jQuery(window).load(function() {
+        // will first fade out the loading animation
+    jQuery("#status").fadeOut();
+        // will fade out the whole DIV that covers the website.
+    jQuery("#preloader").delay(1000).fadeOut("slow");
+})
+
 </script>
 </head>
   <body>
-    <div class="hameid-loader-overlay"></div>    
+   <div id="preloader">
+  <div id="status"></div>
+</div>
 <h1>പ്രിയപ്പെട്ട അസാപിയൻസിന് ഓണാശംസകൾ</h1>
 <span><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- Create Expand Collapse Sliding Menu Using jQuery1 -->
