--- a/index.html
+++ b/index.html
@@ -12,15 +12,9 @@
         // will first fade out the loading animation
     jQuery("#status").fadeOut();
         // will fade out the whole DIV that covers the website.
-    jQuery(document).ready(function ($) {
-    $(window).load(function () {
-        setTimeout(function(){
-            $('#preloader').fadeOut('slow', function () {
-            });
-        },2000); // set the time here
-    });  
-});
-
+    jQuery("#preloader").fadeOut("slow", function () {
+	    });
+},2000);
 </script>
 </head>
   <body>
