--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ jQuery(document).ready(function ($) {
    <div id="preloader">
   <div id="status"></div>
 </div>
-<h1>പ്രിയപ്പെട്ട അസാപിയൻസിന് ഓണാശംസകൾ</h1>
+<h1>ടീം ബി.പി.സി-യ്ക്ക് എന്റെ ഹൃദയംഗമമായ ഓണാശംസകൾ</h1>
 
     <canvas id="screen"></canvas>
 <script src="js/index.js"></script>
