--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="theme-color" content="#000000" />
-    <title>Create Fireworks Effect Using Html5 Canvas</title>
+    <title>ഓണാശംസകൾ</title>
 <link rel="stylesheet" href="css/style.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script>
