--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ jQuery(document).ready(function ($) {
         setTimeout(function(){
             $('#preloader').fadeOut('slow', function () {
             });
-        },4000); // set the time here
+        },2000); // set the time here
     });  
 });
 </script>
@@ -21,7 +21,7 @@ jQuery(document).ready(function ($) {
    <div id="preloader">
   <div id="status"></div>
 </div>
-<h1>ടീം ബി.പി.സി-യ്ക്ക് എന്റെ ഹൃദയംഗമമായ ഓണാശംസകൾ</h1>
+<h1>ബുസ്താന് എന്റെ ഹൃദയംഗമമായ ഓണം-ഈദ് ആശംസകൾ</h1>
 
     <canvas id="screen"></canvas>
 <script src="js/index.js"></script>
