--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ jQuery(document).ready(function ($) {
    <div id="preloader">
   <div id="status"></div>
 </div>
-<h1>ബുസ്താന് എന്റെ ഹൃദയംഗമമായ ഓണം-ഈദ് ആശംസകൾ</h1>
+<h1>തിരിച്ച് എന്റെയും ഹൃദയംഗമമായ ഓണാശംസകൾ</h1>
 
     <canvas id="screen"></canvas>
 <script src="js/index.js"></script>
